--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -42,7 +42,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-  
+
     &.is-open {
       display: block;
     }
@@ -61,7 +61,7 @@
   .mob-nav__item:not(:last-child) {
     margin-bottom: 32px;
   }
-  
+
   .mob-contact__list {
     margin-left: 40px;
   }
@@ -80,17 +80,17 @@
     display: flex;
     @include font(18px, 1.22, 0.02em, 500);
     color: var(--accent-color);
-    
+
     justify-content: left;
     margin-left: 40px;
   }
-    .mob-soc__item {
+  .mob-soc__item {
     border-left: 1px solid rgba(33, 33, 33, 0.2);
-    padding:0 10px;
+    padding: 0 10px;
     &:first-child {
-    border-left: none;
-    padding-left: 0;
-    margin-left: 0;
+      border-left: none;
+      padding-left: 0;
+      margin-left: 0;
     }
   }
 }
@@ -151,8 +151,8 @@
     gap: 10px;
     @include font(12px, 1.16, 0.02em, 500);
     color: var(--additional-text);
-    @media (min-width:1200px) {
-      gap: 30px
+    @media (min-width: 1200px) {
+      gap: 30px;
     }
   }
 
@@ -183,8 +183,7 @@
     flex-direction: row;
     align-items: center;
   }
-  
-  
+
   .site-nav__link:hover,
   .site-nav__link:focus,
   .contact-header__link:hover,
