--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,6 +2,9 @@
   border-bottom: 1px solid #eeeeee;
 }
 
+.site-nav__list .current {
+      color: var(--accent-color);
+    }
 @media (max-width: 767px) {
   .main-nav {
     position: relative;
@@ -11,6 +14,7 @@
     justify-content: space-between;
     max-width: 100%;
   }
+  
   .mob-btn-open,
   .mob-btn-close {
     border: none;
@@ -65,6 +69,9 @@
   .mob-contact__list {
     margin-left: 40px;
   }
+  .mob-nav__list .current {
+      color: var(--accent-color);
+    }
   .mob-contact__item:not(:last-child) {
     margin-bottom: 32px;
   }
