--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,10 +1,8 @@
 .portfolio {
   @media (max-width: 1199px){
-    padding-top: 60px;
-    padding-bottom: 60px;}
+    padding:60px 0;}
     @media (min-width: 1200px){
-    padding-top: 94px;
-    padding-bottom: 94px;}
+    padding:94px 0;}
 }
 
 .portfolio-filter {
