--- a/sass/components/_what_we_do.scss
+++ b/sass/components/_what_we_do.scss
@@ -2,6 +2,12 @@
   @media (max-width:1199px) {
     display: none;
   } 
+   @media (max-width:1199px) {
+    padding-bottom:  60px;
+  } 
+  @media (min-width:1200px) {
+    padding-bottom: 94px;
+  } 
 }
 
 .we-do__title {
