--- a/css/main.css
+++ b/css/main.css
@@ -479,7 +479,7 @@ img {
 @media (max-width: 767px) {
   .menu-container {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: rgb(255, 255, 255);
     padding: 10px;
     text-align: left;
@@ -540,10 +540,12 @@ img {
   letter-spacing: 0.02em;
   color: var(--additional-text);
 }
-.menu-container .mob-soc {
+.menu-container .mob-soc-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
@@ -700,9 +702,26 @@ img {
     color: var(--accent-color);
   }
 }
-@media (max-width: 480px), (max-width: 767px) {
+.hero {
+  max-width: 100%;
+  margin: 0 auto;
+  background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  text-align: center;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  margin-bottom: 60px;
+  height: auto;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .hero {
-    max-width: 100%;
+    background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob_2x.jpg);
+  }
+}
+@media (min-width: 480px) {
+  .hero {
+    max-width: 480px;
     margin: 0 auto;
     background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob.jpg);
     background-repeat: no-repeat;
@@ -710,13 +729,17 @@ img {
     text-align: center;
     padding-top: 118px;
     padding-bottom: 118px;
-    margin-bottom: 60px;
     height: auto;
   }
 }
-@media (min-width: 768px) and (max-width: 1199px) {
+@media (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 480px) and (min-resolution: 2dppx) {
   .hero {
-    max-width: 100%;
+    background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob_2x.jpg);
+  }
+}
+@media (min-width: 768px) {
+  .hero {
+    max-width: 768px;
     margin: 0 auto;
     background-image: url(../images/overlay_tab.png), url(../images/hero_img_tab.jpg);
     background-repeat: no-repeat;
@@ -727,24 +750,33 @@ img {
     height: auto;
   }
 }
+@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../images/overlay_tab.png), url(../images/hero_img_tab_2x.jpg);
+  }
+}
 @media (min-width: 1200px) {
   .hero {
-    max-width: 100%;
+    max-width: 1600px;
     margin: 0 auto;
     background-image: url(../images/Overlay.png), url(../images/hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
-    padding-top: 118px;
-    padding-bottom: 118px;
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
-
-.hero__title {
+@media (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero .hero {
+    background-image: url(../images/Overlay.png), url(../images/hero_2x.jpg);
+  }
+}
+.hero .hero__title {
   margin-bottom: 30px;
 }
 @media (max-width: 1199px) {
-  .hero__title {
+  .hero .hero__title {
     font-weight: 900;
     font-size: 26px;
     line-height: 1.6;
@@ -754,7 +786,7 @@ img {
   }
 }
 @media (min-width: 1200px) {
-  .hero__title {
+  .hero .hero__title {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.3;
@@ -763,8 +795,7 @@ img {
     color: var(--white);
   }
 }
-
-.hero__btn {
+.hero .hero__btn {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -831,7 +862,7 @@ img {
           justify-content: center;
 }
 
-@media (min-width: 480px) {
+@media (max-width: 767px) {
   .feature__title {
     font-weight: 700;
     font-size: 14px;
@@ -842,9 +873,14 @@ img {
     text-align: center;
   }
 }
-
 @media (min-width: 768px) {
   .feature__title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 10px;
     text-align: left;
   }
 }
@@ -1111,33 +1147,30 @@ img {
   }
 }
 
+.portfolio-filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
 @media (max-width: 767px) {
   .portfolio-filter {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     margin-bottom: 32px;
   }
 }
 @media (min-width: 768px) {
   .portfolio-filter {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     margin-bottom: 40px;
   }
 }
 
 .portfolio-filter__item {
   margin-right: 8px;
-  margin-bottom: 8px;
+  margin-bottom: 15px;
 }
 .portfolio-filter__item .current-btn {
   color: var(--white);
@@ -1175,50 +1208,26 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-@media (max-width: 767px) {
-  .portfolio__list {
-    display: block;
-  }
-}
-@media (min-width: 768px) {
-  .portfolio__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin: -15px;
-  }
+.portfolio__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 
-@media (max-width: 767px) {
-  .portfolio__item {
-    margin-bottom: 30px;
-    -webkit-transition-duration: 250ms;
-            transition-duration: 250ms;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-@media (min-width: 768px) {
-  .portfolio__item {
-    width: calc((100% - 60px) / 2);
-    margin: 15px;
-  }
-}
-@media (min-width: 1200px) {
-  .portfolio__item {
-    width: calc((100% - 90px) / 3);
-    margin: 15px;
-    -webkit-transition-duration: 250ms;
-            transition-duration: 250ms;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
+.portfolio__item {
+  -ms-flex-preferred-size: 354px;
+      flex-basis: 354px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .portfolio__link {
   display: block;
+  height: 100%;
 }
 .portfolio__link:hover, .portfolio__link:focus {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -1228,6 +1237,17 @@ img {
   opacity: 1;
   -webkit-transform: translateY(0);
           transform: translateY(0);
+}
+@media (min-width: 768px) {
+  .portfolio__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .portfolio__thumb {
@@ -1263,6 +1283,9 @@ img {
   padding-right: 24px;
   border: 1px solid #eeeeee;
   border-top: none;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .portfolio-card__name {
@@ -1274,7 +1297,7 @@ img {
 }
 
 .portfolio-card__type {
-  font-weight: 400;
+  font-weight: inherit;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
@@ -1339,6 +1362,7 @@ img {
 @media (max-width: 1199px) {
   .address__list {
     margin-bottom: 60px;
+    margin-top: 20px;
   }
 }
 @media (min-width: 1200px) {
