--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -35,6 +35,7 @@
 .address__list {
   @media (max-width:1199px) {
    margin-bottom: 60px;  
+   margin-top: 20px;
   }
   @media (min-width: 1200px) {
   margin-top: 20px;
