--- a/css/main.css
+++ b/css/main.css
@@ -56,18 +56,48 @@ img {
   --contact-text: rgba(255, 255, 255, 0.6);
   --white: #ffffff;
   --black: #000000;
+  --bg-gradient: linear-gradient(
+    rgba(25, 28, 38, 0.2),
+    rgba(25, 28, 38, 0.2)
+  );
 }
 
 .logo-web {
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--accent-color);
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+@media (min-width: 768px) {
+  .logo-web {
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--accent-color);
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+}
+@media (min-width: 1200px) {
+  .logo-web {
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    color: var(--accent-color);
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 
 .logo-studio {
@@ -129,13 +159,13 @@ img {
           transform: translate(-50%, -50%);
   padding: 40px;
 }
-@media (max-width: 480px) {
+@media (max-width: 479px) {
   .modal {
     width: 100%;
     height: 609px;
   }
 }
-@media (max-width: 1199px) {
+@media (min-width: 480px) {
   .modal {
     width: 450px;
     height: 609px;
@@ -651,6 +681,10 @@ img {
 @media (min-width: 768px) and (min-width: 1200px) {
   .contact-header__list {
     gap: 30px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
   }
 }
 @media (min-width: 768px) {
@@ -703,63 +737,66 @@ img {
   }
 }
 .hero {
-  max-width: 100%;
+  max-width: 480px;
   margin: 0 auto;
-  background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob.jpg);
+  background-image: var(--bg-gradient), url(../images/hero_img_mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   text-align: center;
   padding-top: 118px;
   padding-bottom: 118px;
-  margin-bottom: 60px;
-  height: auto;
+  height: 400px;
 }
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   .hero {
-    background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob_2x.jpg);
+    background-image: var(--bg-gradient), url(../images/hero_img_mob_2x.jpg);
   }
 }
 @media (min-width: 480px) {
   .hero {
     max-width: 480px;
     margin: 0 auto;
-    background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob.jpg);
+    background-image: var(--bg-gradient), url(../images/hero_img_mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     text-align: center;
     padding-top: 118px;
     padding-bottom: 118px;
-    height: auto;
+    height: 400px;
   }
 }
-@media (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 480px) and (min-resolution: 2dppx) {
+@media (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 480px) and (min-resolution: 2dppx), (min-width: 480px) and (min-device-pixel-ratio: 2), (min-width: 480px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob_2x.jpg);
+    background-image: var(--bg-gradient), url(../images/hero_img_mob_2x.jpg);
   }
 }
 @media (min-width: 768px) {
   .hero {
     max-width: 768px;
     margin: 0 auto;
-    background-image: url(../images/overlay_tab.png), url(../images/hero_img_tab.jpg);
+    background-image: var(--bg-gradient), url(../images/hero_img_tab.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     text-align: center;
     padding-top: 118px;
     padding-bottom: 118px;
     height: auto;
   }
 }
-@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
+@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx), (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: url(../images/overlay_tab.png), url(../images/hero_img_tab_2x.jpg);
+    background-image: var(--bg-gradient), url(../images/hero_img_tab_2x.jpg);
   }
 }
 @media (min-width: 1200px) {
   .hero {
     max-width: 1600px;
+    height: 600px;
     margin: 0 auto;
-    background-image: url(../images/Overlay.png), url(../images/hero.jpg);
+    background-image: var(--bg-gradient), url(../images/hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
@@ -767,9 +804,9 @@ img {
     padding-bottom: 200px;
   }
 }
-@media (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 2dppx) {
+@media (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 2dppx), (min-width: 1200px) and (min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 192dpi) {
   .hero .hero {
-    background-image: url(../images/Overlay.png), url(../images/hero_2x.jpg);
+    background-image: var(--bg-gradient), url(../images/hero_2x.jpg);
   }
 }
 .hero .hero__title {
@@ -1156,7 +1193,7 @@ img {
 }
 @media (max-width: 767px) {
   .portfolio-filter {
-    margin-bottom: 32px;
+    margin-bottom: 40px;
   }
 }
 @media (min-width: 768px) {
@@ -1164,7 +1201,15 @@ img {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+  }
+}
+@media (min-width: 1200px) {
+  .portfolio-filter {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 50px;
   }
 }
 
@@ -1220,9 +1265,6 @@ img {
 .portfolio__item {
   -ms-flex-preferred-size: 354px;
       flex-basis: 354px;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
 }
 
 .portfolio__link {
@@ -1349,8 +1391,9 @@ img {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 50%;
   }
 }
@@ -1402,6 +1445,11 @@ img {
 
 .footer-social {
   margin-bottom: 60px;
+}
+@media (min-width: 1200px) {
+  .footer-social {
+    margin-right: 93px;
+  }
 }
 
 .footer-social__text,
