--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -23,7 +23,7 @@
   @media (min-width:1200px){
   display: flex;
   align-items: baseline;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 50%;
   }
 }
@@ -69,6 +69,9 @@
 
 .footer-social {
   margin-bottom: 60px;
+  @media (min-width: 1200px) {
+    margin-right: 93px ;
+  }
 }
 
 .footer-social__text,
