--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,88 +1,92 @@
 .hero {
-  max-width: 100%;
-  margin: 0 auto;
-  background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-  padding-top: 118px;
-  padding-bottom: 118px;
-  margin-bottom: 60px;
-  height: auto;
-    @media (min-resolution: 2dppx) {
-      background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob_2x.jpg);
-  }
-  
-  @media (min-width:480px) {
   max-width: 480px;
   margin: 0 auto;
-  background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob.jpg);
+  background-image: var(--bg-gradient), url(../images/hero_img_mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   text-align: center;
   padding-top: 118px;
   padding-bottom: 118px;
-  height: auto;
-    @media (min-resolution: 2dppx) {
-      background-image: url(../images/overlay_mob.png), url(../images/hero_img_mob_2x.jpg);
+  // margin-bottom: 60px;
+  height: 400px;
+  @media (min-resolution: 2dppx), (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    background-image: var(--bg-gradient), url(../images/hero_img_mob_2x.jpg);
+  }
+
+  @media (min-width: 480px) {
+    max-width: 480px;
+    margin: 0 auto;
+    background-image: var(--bg-gradient), url(../images/hero_img_mob.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    height: 400px;
+    @media (min-resolution: 2dppx), (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+      background-image: var(--bg-gradient), url(../images/hero_img_mob_2x.jpg);
     }
   }
   @media (min-width: 768px) {
     max-width: 768px;
     margin: 0 auto;
-    background-image: url(../images/overlay_tab.png), url(../images/hero_img_tab.jpg);
+    background-image: var(--bg-gradient), url(../images/hero_img_tab.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     text-align: center;
     padding-top: 118px;
     padding-bottom: 118px;
     height: auto;
-    @media (min-resolution: 2dppx) {
-      background-image: url(../images/overlay_tab.png), url(../images/hero_img_tab_2x.jpg);
+    @media (min-resolution: 2dppx), (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+      background-image: var(--bg-gradient), url(../images/hero_img_tab_2x.jpg);
     }
   }
 
   @media (min-width: 1200px) {
-  max-width: 1600px;
-  margin: 0 auto;
-  background-image: url(../images/Overlay.png), url(../images/hero.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  @media (min-resolution: 2dppx) {
-    .hero {
-      background-image: url(../images/Overlay.png), url(../images/hero_2x.jpg);
+    max-width: 1600px;
+    height: 600px;
+    margin: 0 auto;
+    background-image: var(--bg-gradient), url(../images/hero.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    @media (min-resolution: 2dppx), (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+      .hero {
+        background-image: var(--bg-gradient), url(../images/hero_2x.jpg);
+      }
     }
   }
-}
 
-.hero__title {
-  @media (max-width: 1199px) {
-    @include font (26px, 1.6, 0.06em, 900);
-    text-transform: uppercase;
-    color: var(--white);
+  .hero__title {
+    @media (max-width: 1199px) {
+      @include font(26px, 1.6, 0.06em, 900);
+      text-transform: uppercase;
+      color: var(--white);
+    }
+    @media (min-width: 1200px) {
+      @include font(44px, 1.3, 0.06em, 900);
+      text-transform: uppercase;
+      color: var(--white);
+    }
+    margin-bottom: 30px;
   }
-  @media (min-width: 1200px) {
-    @include font (44px, 1.3, 0.06em, 900);
-    text-transform: uppercase;
+
+  .hero__btn {
+    font-family: inherit;
+    @include font(16px, 1.88, 0.06em, 700);
+
     color: var(--white);
+    background: var(--accent-color);
+
+    border: none;
+    border-radius: 4px;
+    padding: 10px 32px;
+    margin-left: auto;
+    margin-right: auto;
   }
-  margin-bottom: 30px;
-}
-
-.hero__btn {
-  font-family: inherit;
-  @include font (16px, 1.88, 0.06em, 700);
-
-  color: var(--white);
-  background: var(--accent-color);
-
-  border: none;
-  border-radius: 4px;
-  padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
-}
 }
