--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,10 +1,27 @@
 .logo-web {
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  @include font (26px, 1.19, 0.03em, 700);
-  color: var(--accent-color);
-  padding-top: 24px;
-  padding-bottom: 24px;
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    @include font (24px, 1.19, 0.03em, 700);
+    color: var(--accent-color);
+    padding-top: 16px;
+    padding-bottom: 16px;
+  
+  @media (min-width:768px ) {
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    @include font (24px, 1.19, 0.03em, 700);
+    color: var(--accent-color);
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+  @media (min-width:1200px ) {
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    @include font (26px, 1.19, 0.03em, 700);
+    color: var(--accent-color);
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 .logo-studio {
   font-family: 'Raleway', sans-serif;
