--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,4 +7,8 @@
   --contact-text: rgba(255, 255, 255, 0.6);
   --white: #ffffff;
   --black: #000000;
+  --bg-gradient: linear-gradient(
+    rgba(25, 28, 38, 0.2),
+    rgba(25, 28, 38, 0.2)
+  );
 }
